# Basic-General-Discord-Bot

./: README.md  main.py  pyproject.toml
cogs/: events.py  fun.py  mod.py  other.py
