[tool.poetry]
name = "Basic-General-Discord-Bot"
version = "0.2.0"
description = "A basic discord bot I made for fun in python3"
authors = ["Brandon Zhou <brandonzhou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
